--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,81 +1,118 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
+import Layout from "../layouts/Layout.astro";
+
+type Image = {
+  id: string;
+  src: string;
+  alt: string;
+};
+
+const images: Image[] = [
+  {
+    id: "1",
+    src: "/images/photo1.jpg",
+    alt: "",
+  },
+  {
+    id: "2",
+    src: "/images/photo2.jpg",
+    alt: "",
+  },
+  {
+    id: "3",
+    src: "/images/photo3.jpg",
+    alt: "",
+  },
+  {
+    id: "4",
+    src: "/images/photo4.jpg",
+    alt: "",
+  },
+  {
+    id: "5",
+    src: "/images/photo5.jpg",
+    alt: "",
+  },
+];
 ---
 
 <Layout title="Welcome to Astro.">
-	<main>
-		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
-		<p class="instructions">
-			To get started, open the directory <code>src/pages</code> in your project.<br />
-			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
-		</p>
-		<ul role="list" class="link-card-grid">
-			<Card
-				href="https://docs.astro.build/"
-				title="Documentation"
-				body="Learn how Astro works and explore the official API docs."
-			/>
-			<Card
-				href="https://astro.build/integrations/"
-				title="Integrations"
-				body="Supercharge your project with new frameworks and libraries."
-			/>
-			<Card
-				href="https://astro.build/themes/"
-				title="Themes"
-				body="Explore a galaxy of community-built starter themes."
-			/>
-			<Card
-				href="https://astro.build/chat/"
-				title="Community"
-				body="Come say hi to our amazing Discord community. ❤️"
-			/>
-		</ul>
-	</main>
+  <main>
+    <h1 class="text-2xl text-center title">My Garally</h1>
+    <div class="h-14"></div>
+    <div id="container" class="grid gap-4 grid-cols-3">
+      {
+        images.map((v) => (
+          <a href={`/photo/${v.id}`}>
+            <img
+              class="photo-link rounded-md cursor-pointer transition hover:scale-[1.1] shadow-lg"
+              style={{ viewTransitionName: `photo${v.id}` }}
+              src={v.src}
+              alt={v.alt}
+              width="320"
+            />
+          </a>
+        ))
+      }
+    </div>
+  </main>
 </Layout>
 
+<script>
+  const links = document.querySelectorAll("a.photo-link");
+  links.forEach((link) => {
+    link.addEventListener("click", (e) => {
+      e.preventDefault();
+      (document as any).startViewTransition(() => {
+        location.href = (e.currentTarget as HTMLAnchorElement).href;
+      });
+    });
+  });
+  const container = document.getElementById("container");
+  window.addEventListener("resize", () => {
+    const width = window.innerWidth;
+    if (!container) return;
+
+    (document as any).startViewTransition(() => {
+      container.classList.toggle("grid-cols-1", width <= 614);
+      container.classList.toggle("grid-cols-2", 614 < width && width <= 1000);
+      container.classList.toggle("grid-cols-3", width > 800);
+      //   if (width <= 414) {
+      //   } else if (414 < width && width <= 800) {
+      //     container.classList.toggle("grid gap-4 grid-cols-2", true);
+      //   } else {
+      // 	container.classList.toggle("grid gap-4 grid-cols-3", true);
+      //   }
+    });
+    if (width <= 614) {
+      (document as any).startViewTransition(() => {
+        container.classList.toggle("grid-cols-1", width <= 614);
+      });
+    } else if (614 < width && width <= 1000) {
+      (document as any).startViewTransition(() => {
+        container.classList.toggle("grid-cols-2", 614 < width && width <= 1000);
+      });
+    } else {
+      (document as any).startViewTransition(() => {
+        container.classList.toggle("grid-cols-3", width > 1000);
+      });
+    }
+  });
+</script>
+
 <style>
-	main {
-		margin: auto;
-		padding: 1.5rem;
-		max-width: 60ch;
-	}
-	h1 {
-		font-size: 3rem;
-		font-weight: 800;
-		margin: 0;
-	}
-	.text-gradient {
-		background-image: var(--accent-gradient);
-		-webkit-background-clip: text;
-		-webkit-text-fill-color: transparent;
-		background-size: 400%;
-		background-position: 0%;
-	}
-	.instructions {
-		line-height: 1.6;
-		margin: 1rem 0;
-		border: 1px solid rgba(var(--accent), 25%);
-		background-color: white;
-		padding: 1rem;
-		border-radius: 0.4rem;
-	}
-	.instructions code {
-		font-size: 0.875em;
-		font-weight: bold;
-		background: rgba(var(--accent), 12%);
-		color: rgb(var(--accent));
-		border-radius: 4px;
-		padding: 0.3em 0.45em;
-	}
-	.instructions strong {
-		color: rgb(var(--accent));
-	}
-	.link-card-grid {
-		display: grid;
-		grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
-		gap: 1rem;
-		padding: 0;
-	}
+  main {
+    margin: auto;
+    padding: 1.5rem;
+    max-width: 80%;
+  }
+  h1 {
+    font-size: 3rem;
+    font-weight: 800;
+    margin: 0;
+  }
+  .title {
+    font-family: 'Bruno Ace SC', cursive;
+	view-transition-name: header-title;
+  }
 </style>
